--- a/index.html
+++ b/index.html
@@ -94,14 +94,20 @@
       </div>
       <div class="s__project__right">
         <div class="f-carousel" id="carouselProjeto">
-          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada" data-src="./assets/bg/image-01.jpg">
-            <img src="./assets/bg/image-01.jpg" alt="Enjoy Fachada" title="">
+          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada Vista 1" data-src="./assets/bg/fachada-enjoy01.jpg">
+            <img src="./assets/bg/fachada-enjoy01.jpg" alt="Enjoy Fachada Vista 1">
           </div>
-          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Entrada" data-src="./assets/bg/image-02.jpg">
-            <img src="./assets/bg/image-02.jpg" alt="Enjoy Entrada" title="">
+          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada Vista 2" data-src="./assets/bg/fachada-enjoy02.jpg">
+            <img src="./assets/bg/fachada-enjoy02.jpg" alt="Enjoy Fachada Vista 2">
           </div>
-          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Piscina" data-src="./assets/bg/image-07.jpg">
-            <img src="./assets/bg/image-07.jpg" alt="Enjoy Piscina">
+          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada Vista 3" data-src="./assets/bg/fachada-enjoy03.jpg">
+            <img src="./assets/bg/fachada-enjoy03.jpg" alt="Enjoy Fachada Vista 3">
+          </div>
+          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada Vista 4" data-src="./assets/bg/fachada-enjoy04.jpg">
+            <img src="./assets/bg/fachada-enjoy04.jpg" alt="Enjoy Fachada Vista 4">
+          </div>
+          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada Vista 5" data-src="./assets/bg/fachada-enjoy05.png">
+            <img src="./assets/bg/fachada-enjoy05.png" alt="Enjoy Fachada Vista 5">
           </div>
         </div>
       </div>
@@ -124,7 +130,7 @@
           </a>
         </div>
         <div class="s__location__video">
-          <iframe width="660" height="371" src="https://www.youtube.com/embed/w-f7G3Uk_xU?si=W9LoQC4RJq8awdtK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <img src="./assets/bg/bg-location.png" alt="Localização Enjoy" title="Localização Enjoy">
         </div>
       </div>
     </section>
@@ -136,14 +142,20 @@
       <div class="container">
         <div class="s__info__slide">
           <div class="f-carousel" id="carouselInformation">
-            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Fachada" data-src="./assets/bg/image-08.jpg">
-              <img src="./assets/bg/image-08.jpg" alt="Enjoy Fachada" title="">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Fachada Vista 1" data-src="./assets/bg/fachada-enjoy01.jpg">
+              <img src="./assets/bg/fachada-enjoy01.jpg" alt="Enjoy Fachada" title="">
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Entrada" data-src="./assets/bg/image-07.jpg">
-              <img src="./assets/bg/image-07.jpg" alt="Enjoy Entrada" title="">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Fachada Vista 2" data-src="./assets/bg/fachada-enjoy02.jpg">
+              <img src="./assets/bg/fachada-enjoy02.jpg" alt="Enjoy Fachada" title="">
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Piscina" data-src="./assets/bg/image-05.png">
-              <img src="./assets/bg/image-05.png" alt="Enjoy Piscina">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Fachada Vista 3" data-src="./assets/bg/fachada-enjoy03.jpg">
+              <img src="./assets/bg/fachada-enjoy03.jpg" alt="Enjoy Fachada" title="">
+            </div>
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Fachada Vista 4" data-src="./assets/bg/fachada-enjoy04.jpg">
+              <img src="./assets/bg/fachada-enjoy04.jpg" alt="Enjoy Fachada" title="">
+            </div>
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Fachada Vista 5" data-src="./assets/bg/fachada-enjoy05.png">
+              <img src="./assets/bg/fachada-enjoy05.png" alt="Enjoy Fachada" title="">
             </div>
           </div>
         </div>
@@ -262,36 +274,52 @@
       <div class="container">
         <div class="s__perspectiva__slide">
           <div class="f-carousel" id="carouselPerspectiva">
-            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Perspectiva Academia" data-src="./assets/bg/perspectiva-academia.png">
               <div class="slide__image">
-                <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+                <img src="./assets/bg/perspectiva-academia.png" alt="Perspectiva Academia" title="">
               </div>
               <div class="slide__info">
-                <p>Apartamento 01</p>
+                <p>Perspectiva Academia</p>
               </div>
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/image-05.png">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Perspectiva Brinquedoteca" data-src="./assets/bg/perspectiva-brinquedoteca.png">
               <div class="slide__image">
-                <img src="./assets/bg/image-05.png" alt="Enjoy Apartamento 01" title="">
+                <img src="./assets/bg/perspectiva-brinquedoteca.png" alt="Perspectiva Brinquedoteca" title="">
               </div>
               <div class="slide__info">
-                <p>Apartamento 02</p>
+                <p>Perspectiva Brinquedoteca</p>
               </div>
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/image-02.jpg">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Perspectiva Hall de Entrada" data-src="./assets/bg/perspectiva-halldeentrada.png">
               <div class="slide__image">
-                <img src="./assets/bg/image-02.jpg" alt="Enjoy Apartamento 01" title="">
+                <img src="./assets/bg/perspectiva-halldeentrada.png" alt="Perspectiva Hall de Entrada" title="">
               </div>
               <div class="slide__info">
-                <p>Apartamento 03</p>
+                <p>Perspectiva Hall de Entrada</p>
               </div>
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/image-04.jpg">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Perspectiva Piscina" data-src="./assets/bg/perspectiva-piscina.png">
               <div class="slide__image">
-                <img src="./assets/bg/image-04.jpg" alt="Enjoy Apartamento 01" title="">
+                <img src="./assets/bg/perspectiva-piscina.png" alt="Perspectiva Piscina" title="">
               </div>
               <div class="slide__info">
-                <p>Apartamento 04</p>
+                <p>Perspectiva Piscina</p>
+              </div>
+            </div>
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Perspectiva Varanda Gourmet" data-src="./assets/bg/perspectiva-varandagourmet.png">
+              <div class="slide__image">
+                <img src="./assets/bg/perspectiva-varandagourmet.png" alt="Perspectiva Varanda Gourmet" title="">
+              </div>
+              <div class="slide__info">
+                <p>Perspectiva Varanda Gourmet</p>
+              </div>
+            </div>
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Perspectiva Sala e Cozinha" data-src="./assets/bg/perspectivasalacozinha.png">
+              <div class="slide__image">
+                <img src="./assets/bg/perspectivasalacozinha.png" alt="Perspectiva Sala e Cozinha" title="">
+              </div>
+              <div class="slide__info">
+                <p>Perspectiva Sala e Cozinha</p>
               </div>
             </div>
           </div>
@@ -309,6 +337,9 @@
           <p>Nao perca essa oportunidade</p>
         </div>
         <div class="s__form__bottom">
+          <div role="main" id="enjoy-empreendimento-lp-5bfbc5001c2818336768"></div>
+            <script type="text/javascript" src="https://d335luupugsy2.cloudfront.net/js/rdstation-forms/stable/rdstation-forms.min.js"></script><script type="text/javascript"> new RDStationForms('enjoy-empreendimento-lp-5bfbc5001c2818336768', 'UA-136967931-1').createForm();
+          </script>
           <form id="" action="" method="post">
             <div class="form-group">
               <label for="contactMethod">Forma de Contato:</label><br>
@@ -353,13 +384,9 @@
         <div class="card">
           <h1>Nossos Diferenciais</h1>
           <div class="card-content active">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut porta mattis urna, ac mollis arcu tempor id. Sed rutrum metus eu tellus venenatis congue. Aliquam eleifend justo dignissim tristique dapibus. Maecenas rutrum, diam ac dapibus sodales, diam risus faucibus mi, eu fringilla mi quam ut felis.</p>
+            <p>Confira agora o vídeo da visita dos representantes ao empreendimento DOT, em fase final, no mesmo bairro do Enjoy. Veja de perto a qualidade e inovação que nos destacam!</p>
           </div>
           <p class="depoimentos">Veja depoimentos de nossos clientes</p>
-          <div class="controls">
-            <button class="prev-btn">Anterior</button>
-            <button class="next-btn">Próximo</button>
-          </div>
         </div>
         <div class="s__location__video">
           <iframe width="800" height="500" src="https://www.youtube.com/embed/4lLtOrLtPpY?si=GHu5v2a3PIvHxxQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -376,20 +403,12 @@
           <div class="left">
             <h1>Realização</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod
-              ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet
-              tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas
-              bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus
-              <br><br>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod
-              ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet
-              tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas
-              bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus sodales lacus nec porta
-              <br><br>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod
-              ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet
-              tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas
-              bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus
+              Com atuação e experiência no mercado imobiliário, a Vital Construtora se consolidou no ramo da construção civil. Com empreendimentos de excelente qualidade e foco em sustentabilidade, sofisticação e inovação, oferece soluções para empreendimentos de pequeno, médio e grande porte, além de desenvolver projetos de acordo com cada necessidade. <br><br>
+
+              Com tradição familiar em construção civil, possuindo em sua equipe profissionais capazes e altamente qualificados que podem gerir etapas do seu  projeto, reduzindo custos e facilitando seu relacionamento com seus clientes e amigos. <br><br>
+
+              Atua na região do Sul de Minas com projetos que incluem residências unifamiliares e multifamiliares de médio e alto padrão, edifícios comerciais, desenvolvimento completo de projetos arquitetônicos e complementares, além de oferecer e executar projetos pelo programa do governo federal.
+
             </p>
           </div>
           <div class="right">
