--- a/index.html
+++ b/index.html
@@ -340,38 +340,6 @@
           <div role="main" id="enjoy-empreendimento-lp-5bfbc5001c2818336768"></div>
             <script type="text/javascript" src="https://d335luupugsy2.cloudfront.net/js/rdstation-forms/stable/rdstation-forms.min.js"></script><script type="text/javascript"> new RDStationForms('enjoy-empreendimento-lp-5bfbc5001c2818336768', 'UA-136967931-1').createForm();
           </script>
-          <form id="" action="" method="post">
-            <div class="form-group">
-              <label for="contactMethod">Forma de Contato:</label><br>
-              <select name="contactMethod" id="contactMethod" required>
-                <option value="" disabled selected>Selecione uma opção</option>
-                <option value="email">Email</option>
-                <option value="phone">Telefone</option>
-                <option value="whatsapp">WhatsApp</option>
-                <option value="sms">SMS</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="firstName">Nome:</label><br>
-              <input type="text" name="firstName" id="firstName" placeholder="Nome" required>
-            </div>
-            <div class="form-group">
-              <label for="email">E-mail:</label><br>
-              <input type="text" name="email" id="email" placeholder="E-mail" required>
-            </div>
-            <div class="form-group">
-              <label for="phone">Telefone: <span>(Opcional)</span></label><br>
-              <input type="number" name="phone" id="phone">
-            </div>
-            <div class="form-group">
-              <label for="mensagem">Mensagem:</label><br>
-              <textarea name="mensagem" id="mensagem" rows="2" cols="50"></textarea>
-            </div>
-            <!-- === END OF HIDDEN INPUT === -->
-            <button class="button-modal-form" type="submit">
-              <span>ENVIAR</span>
-            </button>
-          </form>
         </div>
       </div>
     </section>
@@ -389,7 +357,7 @@
           <p class="depoimentos">Veja depoimentos de nossos clientes</p>
         </div>
         <div class="s__location__video">
-          <iframe width="800" height="500" src="https://www.youtube.com/embed/4lLtOrLtPpY?si=GHu5v2a3PIvHxxQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="690" height="390" src="./assets/bg/video.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
     </section>
