--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <!-- 2: preconnect font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Primary Meta Tags -->
     <title>Enjoy | Construtora Vital</title>
+    <meta name="title" content="Enjoy | Construtora Vital" />
+    <meta name="description" content="A localização do empreendimento ENJOY e privilegiada. Ao lado dos bairros de mais prestígio da cidade garante boa vizinhança e é sinônimo de boa valorização." />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lp-construtoravital.vercel.app/" />
+    <meta property="og:title" content="Enjoy | Construtora Vital" />
+    <meta property="og:description" content="A localização do empreendimento ENJOY e privilegiada. Ao lado dos bairros de mais prestígio da cidade garante boa vizinhança e é sinônimo de boa valorização." />
+    <meta property="og:image" content="https://lp-construtoravital.vercel.app/assets/bg/fachada-enjoy01.jpg" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://lp-construtoravital.vercel.app/" />
+    <meta property="twitter:title" content="Enjoy | Construtora Vital" />
+    <meta property="twitter:description" content="A localização do empreendimento ENJOY e privilegiada. Ao lado dos bairros de mais prestígio da cidade garante boa vizinhança e é sinônimo de boa valorização." />
+    <meta property="twitter:image" content="https://lp-construtoravital.vercel.app/assets/bg/fachada-enjoy01.jpg" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
     <!-- Phosphor Font Link -->
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <!-- Favicon -->
