--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <meta name="description" content="A localização do empreendimento ENJOY e privilegiada. Ao lado dos bairros de mais prestígio da cidade garante boa vizinhança e é sinônimo de boa valorização." />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://lp-construtoravital.vercel.app/" />
+    <meta property="og:url" content="https://vitalenjoy.com.br/" />
     <meta property="og:title" content="Enjoy | Construtora Vital" />
     <meta property="og:description" content="A localização do empreendimento ENJOY e privilegiada. Ao lado dos bairros de mais prestígio da cidade garante boa vizinhança e é sinônimo de boa valorização." />
-    <meta property="og:image" content="https://lp-construtoravital.vercel.app/assets/bg/fachada-enjoy01.jpg" />
+    <meta property="og:image" content="https://vitalenjoy.com.br/assets/bg/fachada-enjoy01.jpg" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://lp-construtoravital.vercel.app/" />
+    <meta property="twitter:url" content="https://vitalenjoy.com.br/" />
     <meta property="twitter:title" content="Enjoy | Construtora Vital" />
     <meta property="twitter:description" content="A localização do empreendimento ENJOY e privilegiada. Ao lado dos bairros de mais prestígio da cidade garante boa vizinhança e é sinônimo de boa valorização." />
-    <meta property="twitter:image" content="https://lp-construtoravital.vercel.app/assets/bg/fachada-enjoy01.jpg" />
-
-<!-- Meta Tags Generated with https://metatags.io -->
+    <meta property="twitter:image" content="https://vitalenjoy.com.br/assets/bg/fachada-enjoy01.jpg" />
+    <link rel="icon" type="image/x-icon" href="./favicon-vital.ico">
+    <!-- Meta Tags Generated with https://metatags.io -->
     <!-- Phosphor Font Link -->
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <!-- Favicon -->
