--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
     <!-- Meta Tags Generated with https://metatags.io -->
     <!-- Phosphor Font Link -->
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <script>      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '3707993649424220');
+      fbq('track', 'PageView');
+    </script>
+    <noscript>
+      <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=3707993649424220&ev=PageView&noscript=1"
+    />
+    </noscript>
     <!-- Favicon -->
     <link rel="shortcut icon" href="">
     <!-- 3: display font -->
@@ -117,14 +132,11 @@
           <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada Vista 2" data-src="./assets/bg/fachada-enjoy02.jpg">
             <img src="./assets/bg/fachada-enjoy02.jpg" alt="Enjoy Fachada Vista 2">
           </div>
-          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada Vista 3" data-src="./assets/bg/fachada-enjoy03.jpg">
-            <img src="./assets/bg/fachada-enjoy03.jpg" alt="Enjoy Fachada Vista 3">
-          </div>
           <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada Vista 4" data-src="./assets/bg/fachada-enjoy04.jpg">
-            <img src="./assets/bg/fachada-enjoy04.jpg" alt="Enjoy Fachada Vista 4">
+            <img src="./assets/bg/fachada-enjoy04.jpg" alt="Enjoy Fachada Vista 3">
           </div>
           <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada Vista 5" data-src="./assets/bg/fachada-enjoy05.png">
-            <img src="./assets/bg/fachada-enjoy05.png" alt="Enjoy Fachada Vista 5">
+            <img src="./assets/bg/fachada-enjoy05.png" alt="Enjoy Fachada Vista 4">
           </div>
         </div>
       </div>
@@ -141,7 +153,7 @@
           </div>
           <h3>Aproveite cada momento</h3>
           <p>A localização do empreendimento ENJOY e privilegiada. Ao lado dos bairros de mais prestígio da cidade garante boa vizinhança e é sinônimo de boa valorização.</p>
-          <a href="https://maps.app.goo.gl/pDvPHXjv4M99TPKd8" class="btn-quotes" target="_blank">
+          <a href="https://maps.app.goo.gl/RYxufGokrHntEuFMA" class="btn-quotes" target="_blank">
             <p>Olhe no Google Maps</p>
             <i class="ph-bold ph-arrow-right"></i>
           </a>
@@ -267,16 +279,16 @@
               <img src="./assets/bg/bg-plantas.png" alt="Enjoy Planta" title="">
               <div class="slide__text">
                 <h3>Modelo Planta <br> Tipo A</h3>
-                <p>proposta de layout</p>
-                <span>Finais 01 | 02 | 03 | 04 | 05 | 06</span>
+                <p>Proposta de layout</p>
+                <span>Finais 01 | 02 | 04 | 05 | 06</span>
               </div>
             </div>
             <div class="f-carousel__slide" data-fancybox="galleryPlanta" data-caption="Enjoy Planta" data-src="./assets/bg/bg-plantas.png">
-              <img src="./assets/bg/bg-plantas.png" alt="Enjoy Planta" title="">
+              <img src="./assets/bg/Enjoy_AP01.png" alt="Enjoy Planta" title="Enjoy Planta">
               <div class="slide__text">
-                <h3>Modelo Planta</h3>
-                <p>proposta de layout</p>
-                <span>Finais 01 | 02 | 03 | 04 | 05 | 06</span>
+                <h3>Modelo Planta<br> Tipo B</h3>
+                <p>Proposta de layout</p>
+                <span>Finais 03 | 08 </span>
               </div>
             </div>
           </div>
